--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> xin chao ban kevin Hello kevin This is the title of the webpage!</title>
   </head>
   <body>
-    <p> xin chao ban - Hello KEVIN Page This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p> toi xin chao ban - Hello KEVIN Page This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   <span> Test git status
     
   </span>
